public/style.css
#body {
  padding-top: 70px;
  font-family: 'Open Sans', sans-serif;
  font-size: small;
}

footer {
  margin: 1em 0;
}

footer p {
  border-top: 1px solid #eee;
  padding-top: .5em;
}

h2 {
  margin-top: 0;
}

.phrase {
  border: none;
  padding: 0px;
  margin: 0px;
  margin-right: 0.3em;
  border-radius: 0px;
  line-height: 100%;
  display: inline-block;
  white-space: pre;
  word-break: normal;
  word-wrap: normal;
}

.mute { 
  color: #ccc;
}

.join {
  margin-left: -0.3em;
}

.section-header {
  color: #ccc;
  text-transform: small-caps;
}

hr {
  margin: 0px;
  padding: 0px;
  margin-bottom: 5px;
}

textarea {
  font-family: monospace;
}

.btn {
  margin-bottom: 4px;
}

.switches button, .edit, .delete {
  display: block;
  clear: right;
  float: right;
}

.center {
  text-align: center;
}

.alts-modal .btn-link {
  color: inherit; cursor: inherit;
}

.alts-modal .btn-link:hover {
  color: inherit; cursor: inherit;
}

.modal-visible {
  display: block;
}

.playback-active {
  margin: -4px;
  border: 4px solid #CCFBCC;
  background: #CCFBCC;
  display: inline-block;
}

.clickable, .clickable-color {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.clickable-color {
  color: #5bc0de;
}

.section {
  margin-bottom: 1.5em;
}

.transpose-toolbar {
  white-space: nowrap;
}

.transpose-key {
  width: 30px;
  display: inline-block;
  text-align: center;
}

.transpose-key:hover {
  text-decoration: underline;
}

.signin {
  cursor: pointer;
  width: 200px;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
  cursor: pointer;
  color: black;
}

.nav-icon {
  width: 20px;
  float: left;
}

.navbar-nav > .disabled.navbar-username > a {
  color: #777;
}

ul.splash-list {
  padding-left: 5px;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

ul.splash-list .glyphicon {
  margin-right: 10px;
}

ul.splash-list li {
  font-size: medium;
  list-style-type: none;
  padding: 10px 0;
}

.splash-well {
  height: 180px;
}

.signin-well {
  text-align: center;
}

.markato-snippet-help {
  float: right;
  color: #666;
  font-family: 'Open Sans', sans-serif;
}

.markato-output.font-sm {
  font-size: x-small;
}

.markato-output.font-lg {
  font-size: medium;
}

@media print {
  .switches, .edit, .delete, .markato-input, .transpose-down, .transpose-up, footer, .alert {
    display: none;
  }

  .playback-active {
    border: none;
    background: none;
  }
}

